# datum-rs

./: BENCH_VALIDATION.md  Cargo.toml  LICENSE  README.md  TESTING.md
.github/workflows/: ci.yml
.wiki/: _index.md  config.md  log.md
.wiki/output/: _index.md  plan-stratum-v2-listener-2026-06-16.md
.wiki/raw/: _index.md
.wiki/raw/articles/: _index.md
.wiki/raw/data/: _index.md
.wiki/raw/notes/: 2026-06-16-delvingbitcoin-sjors-sv2-noise-bip324-413.md  2026-06-16-esp-miner-issue-1758-sv2-byte-order-debugging.md  2026-06-16-ocean-datum-gateway-sv2-issue-146.md  2026-06-16-sri-issue-2103-noise-responder-overflow.md  2026-06-18-ll-sv2-listener-live-validation.md  _index.md
.wiki/raw/papers/: 2026-06-16-sv2-spec-04-noise-handshake.md  2026-06-16-sv2-spec-05-mining-protocol.md  2026-06-16-sv2-spec-08-message-types.md  _index.md
.wiki/raw/repos/: 2026-06-16-bitaxe-esp-miner-pr-1553-sv2-merge.md  2026-06-16-sri-pool-channel-manager-impl.md  2026-06-16-sri-pool-mining-message-handler.md  2026-06-16-sri-stratum-mining-stratum.md  _index.md
.wiki/wiki/: _index.md
.wiki/wiki/concepts/: _index.md  sv2-channel-types.md  sv2-extranonce-hierarchy.md  sv2-mining-protocol.md  sv2-noise-handshake.md
.wiki/wiki/references/: _index.md  sri-crate-map.md  sri-pool-mining-handler.md  sv2-message-types.md
.wiki/wiki/theses/: _index.md
.wiki/wiki/topics/: _index.md  sv2-downstream-architecture.md
crates/datum-api/: Cargo.toml
crates/datum-api/src/: digest.rs  lib.rs
crates/datum-bin/: Cargo.toml
crates/datum-bin/src/: main.rs
crates/datum-blocktemplates/: Cargo.toml
crates/datum-blocktemplates/src/: lib.rs  template_state.rs
crates/datum-blocktemplates/tests/: foundations_e2e.rs
crates/datum-coinbaser/: Cargo.toml
crates/datum-coinbaser/src/: lib.rs
crates/datum-config/: Cargo.toml
crates/datum-config/src/: lib.rs  sections.rs  validate.rs
crates/datum-dupes/: Cargo.toml
crates/datum-dupes/src/: lib.rs
crates/datum-logger/: Cargo.toml
crates/datum-logger/src/: lib.rs
crates/datum-logger/tests/: c_log_format.rs
crates/datum-logger/tests/fixtures/: c-log-lines.txt
crates/datum-protocol/: Cargo.toml
crates/datum-protocol/src/: client.rs  crypto.rs  frame.rs  handshake.rs  lib.rs  messages.rs  mock_pool.rs  obfuscation.rs  opcodes.rs
crates/datum-protocol/tests/: c_capture_compat.rs  client_round_trip.rs  handshake_local.rs
crates/datum-rpc/: Cargo.toml
crates/datum-rpc/src/: lib.rs
crates/datum-share-relay/: Cargo.toml
crates/datum-share-relay/src/: lib.rs  share_encoder.rs
crates/datum-stratum-sv1/: Cargo.toml
crates/datum-stratum-sv1/src/: assembler.rs  lib.rs  server.rs
crates/datum-stratum-sv1/tests/: sv1_notify_byte_fixture.rs
crates/datum-stratum-sv1/tests/fixtures/: c-mining-notify.txt
crates/datum-stratum-sv2/: Cargo.toml
crates/datum-stratum-sv2/src/: auth.rs  channel_manager.rs  lib.rs  listener.rs  noise_stream.rs  setup_connection.rs  share_path.rs
crates/datum-stratum-sv2/tests/: channel_open.rs  cross_protocol.rs  e2e_mining_device.rs  e2e_translator.rs  listener_backpressure.rs  setup_connection_loopback.rs  sri_dep_resolves.rs  sv2_dispatch.rs  sv2_loopback.rs  sv2_wire_goldens.rs
crates/datum-submitblock/: Cargo.toml
crates/datum-submitblock/src/: lib.rs
