[package]
name = "datum-bin"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "datum_gateway"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
datum-api = { path = "../datum-api" }
datum-blocktemplates = { path = "../datum-blocktemplates" }
datum-coinbaser = { path = "../datum-coinbaser" }
datum-config = { path = "../datum-config" }
datum-dupes = { path = "../datum-dupes" }
datum-logger = { path = "../datum-logger" }
datum-protocol = { path = "../datum-protocol" }
datum-rpc = { path = "../datum-rpc" }
datum-stratum-sv1 = { path = "../datum-stratum-sv1" }
datum-stratum-sv2 = { path = "../datum-stratum-sv2" }
datum-submitblock = { path = "../datum-submitblock" }
hex = { workspace = true }
parking_lot = "0.12"
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tracing = { workspace = true }
