[package]
name = "datum-blocktemplates"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
datum-coinbaser = { path = "../datum-coinbaser" }
datum-rpc = { path = "../datum-rpc" }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
datum-coinbaser = { path = "../datum-coinbaser" }
datum-rpc = { path = "../datum-rpc" }
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time", "test-util"] }
