[package]
name = "datum-stratum-sv1"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
datum-blocktemplates = { path = "../datum-blocktemplates" }
datum-coinbaser = { path = "../datum-coinbaser" }
datum-dupes = { path = "../datum-dupes" }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
