[package]
name = "datum-stratum-sv2"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
datum-blocktemplates = { path = "../datum-blocktemplates" }
datum-coinbaser = { path = "../datum-coinbaser" }
datum-dupes = { path = "../datum-dupes" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
datum-stratum-sv1 = { path = "../datum-stratum-sv1" }
hex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
