[package]
name = "datum-stratum-sv2"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
datum-blocktemplates = { path = "../datum-blocktemplates" }
datum-coinbaser = { path = "../datum-coinbaser" }
datum-config = { path = "../datum-config" }
datum-dupes = { path = "../datum-dupes" }
datum-protocol = { path = "../datum-protocol" }
datum-share-relay = { path = "../datum-share-relay" }
hex = { workspace = true }
stratum-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# Server-side merkle-root precompute for Standard channels (Phase 4).
# Pinned 0.10 to match the rest of the workspace; sha2 0.11 in the lockfile
# is pulled by SRI's bitcoin path and we keep our edge separate.
sha2 = "0.10"
# SRI's Noise/key types come transitively via stratum-core, but we depend on
# secp256k1 directly so we can build the Schnorr Keypair/SecretKey we hand to
# `noise_sv2::Responder::from_authority_kp`. Pin the version SRI uses on this
# rev so codegen stays consistent.
secp256k1 = { version = "0.28.2", default-features = false, features = ["alloc", "rand"] }
bs58 = { version = "0.5", default-features = false, features = ["check", "alloc"] }

[features]
# End-to-end test against sv2-apps's native SV2 `mining_device` CPU miner.
# Requires network + a multi-minute first-time build of the upstream
# `sv2-apps` workspace, so it is gated behind a feature flag AND the test is
# `#[ignore]` by default.
# Run with: `cargo test -p datum-stratum-sv2 --features e2e --test e2e_mining_device -- --ignored`.
e2e = []

[dev-dependencies]
datum-stratum-sv1 = { path = "../datum-stratum-sv1" }
hex = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "process", "io-util", "time"] }
secp256k1 = { version = "0.28.2", default-features = false, features = ["alloc", "rand"] }
bs58 = { version = "0.5", default-features = false, features = ["check", "alloc"] }
