[package]
name = "datum-submitblock"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
datum-rpc = { path = "../datum-rpc" }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
